--- a/Pages/NavigationPages/LogInPage/LogInNavPage.xaml
+++ b/Pages/NavigationPages/LogInPage/LogInNavPage.xaml
@@ -2,17 +2,23 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="StudentPortal.Pages.NavigationPages.LogInPage.LogIn"
-             Title="LogIn"
+             Title="Log In"
              BackgroundColor="GhostWhite">
     <ScrollView>
         <VerticalStackLayout Padding="10,0,10,50">
+
+            <Image Source="school_bag.png"
+                   HeightRequest="100"
+                   WidthRequest="100"
+                   HorizontalOptions="Center"
+                   Margin="0,25,0,10"/>
+            
             <Label 
                 Text="Student Portal"
-                FontSize="30" 
+                FontSize="36" 
                 FontAttributes="Bold"
-                Margin="20,60,20,0"
-                TextColor="Black"
-                VerticalOptions="Center" 
+                Margin="0,10,0,20"
+                TextColor="#2C3E50"
                 HorizontalOptions="Center" />
 
             <Frame BorderColor="Black"
@@ -20,7 +26,7 @@
                 Padding="15"
                 BackgroundColor="Azure"
                 HasShadow="True"
-                Margin="0,50,0,0">
+                Margin="0,25,0,0">
                 <Grid ColumnSpacing="5" RowSpacing="5">
                     <Grid.RowDefinitions>
                         <RowDefinition Height="Auto"/>
@@ -72,28 +78,21 @@
                         IsPassword="True"/>
                 </Grid>
             </Frame>
-
-            <CollectionView x:Name="LogInCollection">
-                <CollectionView.ItemTemplate>
-                    <DataTemplate>
-
-                    </DataTemplate>
-                </CollectionView.ItemTemplate>
-            </CollectionView>
-
             <Button
-            x:Name="LogInButton"
-            Text="Log In"
-            TextColor="White"
-            WidthRequest="200"
-            Margin="0,75,0,0"
-            BackgroundColor="ForestGreen"
-            FontAttributes="Bold"
-            FontSize="25"
-            HorizontalOptions="Center"
-            Clicked="LogInButton_Clicked"
-        />
-
+                x:Name="LogInButton"
+                Text="Log In"
+                TextColor="White"
+                WidthRequest="220"
+                HeightRequest="55"
+                Margin="0,30,0,0"
+                BackgroundColor="#27AE60"
+                FontAttributes="Bold"
+                FontSize="22"
+                CornerRadius="30"
+                HorizontalOptions="Center"
+                CommandParameter="{Binding .}"
+                Clicked="LogInButton_Clicked"
+            />
         </VerticalStackLayout>
     </ScrollView>
 </ContentPage>
